--- a/style.css
+++ b/style.css
@@ -140,7 +140,8 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: .2; }
+  opacity: .2;
+  overflow: hidden; }
   .bg-video__content {
     height: 100%;
     width: 100%;
